[tool.poetry]
name = "pls-playlist"
version = "0.1.0"
description = "PLS Playlist Generator"
authors = ["SiMylo <dstephenlarsen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0.1"
hsaudiotag3k = "^1.1.3.post1"
mutagen = "^1.47.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
